<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/game_coord_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay" />
...
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:layout_height="wrap_content"
                    android:width="@dimen/table_number_column_width"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/header"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:divider="#000"
                    android:dividerHeight="2dp"
                    android:listSelector="#600"/>

...
            <ScrollView
                android:id="@+id/tableScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tableBody"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/table_scroll_bottom_padding"
                    android:clipToPadding="false"
                    android:background="@color/colorTableHeader"
                    android:elevation="2dp">
...

        </TableLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        style="?attr/bottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:elevation="8dp"
        android:orientation="vertical"
...
                android:layout_height="@dimen/sheet_icon"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_hands_24dp"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/currentRound"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sheet_item_height"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/sheet_icon_text_padding"
                android:textSize="@dimen/sheet_text" />

...
                android:layout_height="@dimen/sheet_icon"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_first_24dp"
                app:tint="@color/colorPrimary"/>

            <TextView
                android:id="@+id/firstPlayer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sheet_item_height"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/sheet_icon_text_padding"
                android:textSize="@dimen/sheet_text" />

...
                android:layout_height="@dimen/sheet_icon"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_dealer_24dp"
                app:tint="@color/colorPrimary"/>

            <TextView
                android:id="@+id/dealer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sheet_item_height"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/sheet_icon_text_padding"
                android:textSize="@dimen/sheet_text" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:elevation="10dp"
        android:onClick="addScore"
        app:fabSize="normal"
...
