...
    <string name="app_name">Whist Score Tracker</string>

    <string name="title_activity_menu">Whist Score Tracker</string>
    <string name="title_new_game">New game setup</string>

    <string name="main_menu_load">Load Game</string>
    <string name="main_menu_new">New Game</string>
    <string name="settings">Settings</string>
    <string name="game_current_round">Round %d / %d</string>
    <string name="menu_empty_unfinished_title">There is nothing here!</string>
    <string name="menu_empty_unfinished_content">If you start a game and close the app, it will be waiting for you here so you can continue playing it.</string>
    <string name="menu_empty_finished_title">There is nothing here!</string>
    <string name="menu_empty_finished_content">After you finish a game, it will show up here so you can see the table.</string>

    <string name="new_game_type">Game type</string>
    <string name="new_game_type_181">1..8..1</string>
    <string name="new_game_type_818">8..1..8</string>
    <string name="new_game_prize">Prize</string>
    <string name="new_game_prize_0">None</string>
    <string name="new_game_prize_5">+/- 5</string>
    <string name="new_game_prize_10">+/- 10</string>
    <string name="new_game_players">Players</string>
    <string name="new_game_start">Start game</string>
    <string name="new_game_player_name">Name</string>
    <string name="add_player">Add player</string>

    <plurals name="numberOfHands">
        <item quantity="one">%d hand</item>
        <item quantity="other">%d hands</item>
...
    <string name="dealer">Dealer: %s</string>

    <string name="choose_results">Add your results</string>
    <string name="place_bets">Place your bets</string>
    <string name="game_table">Game Table</string>
    <string name="undo_prompt">Undo last input?</string>
    <string name="undo">Undo</string>
    <string name="undo_result">Last input was undone.</string>
    <string name="cancel">Cancel</string>
    <string name="no_rounds">No rounds were played yet!</string>
    <string name="restart_prompt">Restart game?</string>
    <string name="restart_discard">The game is not over, so the current scores will be discarded.</string>
    <string name="restart">Restart</string>
...
