<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scoreRow">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="@dimen/table_number_column_width"
            android:layout_column="0"
            android:textSize="25sp"
            android:textAlignment="center"
            android:id="@+id/roundNumber"
            android:text=""/>

</TableRow>
