package com.alexandruro.whistscoretracker;


import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.filters.LargeTest;

import com.alexandruro.whistscoretracker.activity.MainMenuActivity;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Rule;
import org.junit.Test;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBackUnconditionally;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withParent;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

@LargeTest
public class E2ETest {

    @Rule
    public ActivityScenarioRule<MainMenuActivity> mActivityScenarioRule = new ActivityScenarioRule<>(MainMenuActivity.class);

    @Test
    public void e2ETest() {
        ViewInteraction appCompatButton = onView(
                allOf(withId(R.id.buttonNewGame), withText("New Game"),
                        isDisplayed()));
        appCompatButton.perform(click());

        ViewInteraction appCompatRadioButton = onView(
                allOf(withId(R.id.radioGameTypeOneEightOne), withText("1..8..1"),
                        childAtPosition(
                                withId(R.id.radioGroup),
                                0)));
        appCompatRadioButton.perform(scrollTo(), click());

        ViewInteraction appCompatRadioButton2 = onView(
                allOf(withId(R.id.radioPrize5), withText("+/- 5"),
                        childAtPosition(
                                withId(R.id.radioGroup2),
                                1)));
        appCompatRadioButton2.perform(scrollTo(), click());

        ViewInteraction appCompatEditText = onView(
                allOf(withId(R.id.name),
                        childAtPosition(
                                withParent(withId(R.id.nameListView)),
                                0)));
        appCompatEditText.perform(scrollTo(), replaceText("One"), closeSoftKeyboard());

        ViewInteraction appCompatImageButton2 = onView(
                withId(R.id.buttonAdd));
        appCompatImageButton2.perform(scrollTo(), click());

        ViewInteraction appCompatEditText2 = onView(
                allOf(withId(R.id.name),
                        withParent(
                                childAtPosition(
                                        withId(R.id.nameListView),
                                1))));
        appCompatEditText2.perform(scrollTo(), replaceText("Two"), closeSoftKeyboard());

        ViewInteraction appCompatImageButton3 = onView(
                withId(R.id.buttonAdd));
        appCompatImageButton3.perform(scrollTo(), click());

        ViewInteraction appCompatEditText3 = onView(
                allOf(withId(R.id.name),
                        withParent(
                                childAtPosition(
                                        withId(R.id.nameListView),
                                2))));
        appCompatEditText3.perform(scrollTo(), replaceText("Three"), closeSoftKeyboard());

        ViewInteraction appCompatImageButton4 = onView(
                withId(R.id.buttonAdd));
        appCompatImageButton4.perform(scrollTo(), click());

        ViewInteraction appCompatEditText4 = onView(
                allOf(withId(R.id.name),
                        withParent(
                                childAtPosition(
                                        withId(R.id.nameListView),
                                3))));
        appCompatEditText4.perform(scrollTo(), replaceText("Four"), closeSoftKeyboard());

        ViewInteraction appCompatImageButton5 = onView(
                withId(R.id.buttonAdd));
        appCompatImageButton5.perform(scrollTo(), click());

        ViewInteraction appCompatImageButton6 = onView(
                allOf(withId(R.id.remove),
                        isDisplayed(),
                        childAtPosition(
                                withParent(withId(R.id.nameListView)),
                                1)));
        appCompatImageButton6.perform(scrollTo(), click());

        ViewInteraction appCompatButton2 = onView(
                allOf(withId(R.id.buttonStart), withText("Start game")));
        appCompatButton2.perform(scrollTo(), click());

        ViewInteraction textView = onView(
                allOf(withId(R.id.currentRound), withText("1 hand"),
                        withParent(withParent(withId(R.id.bottom_sheet)))));
        textView.check(matches(withText("1 hand")));

        ViewInteraction textView2 = onView(
                allOf(withId(R.id.firstPlayer), withText("First player: One"),
                        withParent(withParent(withId(R.id.bottom_sheet)))));
        textView2.check(matches(withText("First player: One")));

        ViewInteraction textView3 = onView(
                allOf(withId(R.id.dealer), withText("Dealer: Four"),
                        withParent(withParent(withId(R.id.bottom_sheet)))));
        textView3.check(matches(withText("Dealer: Four")));

        ViewInteraction floatingActionButton = onView(
                allOf(withId(R.id.floatingActionButton),
                        childAtPosition(
                                allOf(withId(R.id.game_coord_layout),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                3),
                        isDisplayed()));
        floatingActionButton.perform(click());

        ViewInteraction button = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button.perform(click());

        ViewInteraction button2 = onView(
                allOf(withText("1"),
                        childAtPosition(
                                withId(R.id.grid),
                                1),
                        isDisplayed()));
        button2.perform(click());

        ViewInteraction button3 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button3.perform(click());

        ViewInteraction button4 = onView(
                allOf(withText("1"),
                        childAtPosition(
                                withId(R.id.grid),
                                1),
                        isDisplayed()));
        button4.perform(click());

        ViewInteraction textView4 = onView(
                allOf(withId(R.id.roundNumber), withText("1"),
                        withParent(allOf(withId(R.id.scoreRow),
                                withParent(withId(R.id.tableBody)))),
                        isDisplayed()));
        textView4.check(matches(withText("1")));

        ViewInteraction textView5 = onView(
                allOf(withText("0"),
                        childAtPosition(withId(R.id.scoreRow), getViewIndexOfBet(0)),
                        withParent(allOf(withId(R.id.scoreRow),
                                withParent(withId(R.id.tableBody)))),
                        isDisplayed()));
        textView5.check(matches(withText("0")));

        ViewInteraction textView6 = onView(
                allOf(withText("1"),
                        childAtPosition(withId(R.id.scoreRow), getViewIndexOfBet(1)),
                        withParent(allOf(withId(R.id.scoreRow),
                                withParent(withId(R.id.tableBody)))),
                        isDisplayed()));
        textView6.check(matches(withText("1")));

        onView(
                allOf(withText("0"),
                        childAtPosition(withId(R.id.scoreRow), getViewIndexOfBet(2)),
                        withParent(allOf(withId(R.id.scoreRow),
                                withParent(withId(R.id.tableBody)))),
                        isDisplayed()))
                .check(matches(withText("0")));

        onView(
                allOf(withText("1"),
                        childAtPosition(withId(R.id.scoreRow), getViewIndexOfBet(3)),
                        withParent(allOf(withId(R.id.scoreRow),
                                withParent(withId(R.id.tableBody)))),
                        isDisplayed()))
                .check(matches(withText("1")));

        ViewInteraction textView7 = onView(
                allOf(withText("One"),
                        withParent(allOf(withId(R.id.header),
                                withParent(IsInstanceOf.instanceOf(android.widget.TableRow.class)))),
                        isDisplayed()));
        textView7.check(matches(withText("One")));

        ViewInteraction textView8 = onView(
                allOf(withText("Two"),
                        withParent(allOf(withId(R.id.header),
                                withParent(IsInstanceOf.instanceOf(android.widget.TableRow.class)))),
                        isDisplayed()));
        textView8.check(matches(withText("Two")));

        ViewInteraction textView9 = onView(
                allOf(withText("Three"),
                        withParent(allOf(withId(R.id.header),
                                withParent(IsInstanceOf.instanceOf(android.widget.TableRow.class)))),
                        isDisplayed()));
        textView9.check(matches(isDisplayed()));

        ViewInteraction textView10 = onView(
                allOf(withText("Four"),
                        withParent(allOf(withId(R.id.header),
                                withParent(IsInstanceOf.instanceOf(android.widget.TableRow.class)))),
                        isDisplayed()));
        textView10.check(matches(isDisplayed()));

        ViewInteraction actionMenuItemView = onView(
                allOf(withId(R.id.action_undo), withContentDescription("Undo"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.toolbar),
                                        2),
                                0),
                        isDisplayed()));
        actionMenuItemView.perform(click());

        ViewInteraction appCompatButton3 = onView(
                allOf(withId(android.R.id.button1), withText("Undo"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.buttonPanel),
                                        0),
                                3)));
        appCompatButton3.perform(scrollTo(), click());

        ViewInteraction actionMenuItemView2 = onView(
                allOf(withId(R.id.action_undo), withContentDescription("Undo"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.toolbar),
                                        2),
                                0),
                        isDisplayed()));
        actionMenuItemView2.perform(click());

        ViewInteraction floatingActionButton2 = onView(
                allOf(withId(R.id.floatingActionButton),
                        childAtPosition(
                                allOf(withId(R.id.game_coord_layout),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                3),
                        isDisplayed()));
        floatingActionButton2.perform(click());

        ViewInteraction button5 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button5.perform(click());

        ViewInteraction button6 = onView(
                allOf(withText("1"),
                        childAtPosition(
                                withId(R.id.grid),
                                1),
                        isDisplayed()));
        button6.perform(click());

        ViewInteraction button7 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button7.perform(click());

        ViewInteraction button8 = onView(
                allOf(withText("1"),
                        childAtPosition(
                                withId(R.id.grid),
                                1),
                        isDisplayed()));
        button8.perform(click());

        ViewInteraction floatingActionButton3 = onView(
                allOf(withId(R.id.floatingActionButton),
                        childAtPosition(
                                allOf(withId(R.id.game_coord_layout),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                3),
                        isDisplayed()));
        floatingActionButton3.perform(click());

        ViewInteraction button9 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button9.perform(click());

        ViewInteraction button10 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button10.perform(click());

        ViewInteraction button11 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button11.perform(click());

        ViewInteraction button12 = onView(
                allOf(withText("1"),
                        childAtPosition(
                                withId(R.id.grid),
                                1),
                        isDisplayed()));
        button12.perform(click());

        ViewInteraction floatingActionButton4 = onView(
                allOf(withId(R.id.floatingActionButton),
                        childAtPosition(
                                allOf(withId(R.id.game_coord_layout),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                3),
                        isDisplayed()));
        floatingActionButton4.perform(click());

        ViewInteraction button13 = onView(
                allOf(withText("1"),
                        childAtPosition(
                                withId(R.id.grid),
                                1),
                        isDisplayed()));
        button13.perform(click());

        ViewInteraction button14 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button14.perform(click());

        ViewInteraction button15 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button15.perform(click());

        ViewInteraction button16 = onView(
                allOf(withText("1"),
                        childAtPosition(
                                withId(R.id.grid),
                                1),
                        isDisplayed()));
        button16.perform(click());

        ViewInteraction floatingActionButton5 = onView(
                allOf(withId(R.id.floatingActionButton),
                        childAtPosition(
                                allOf(withId(R.id.game_coord_layout),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                3),
                        isDisplayed()));
        floatingActionButton5.perform(click());

        ViewInteraction button17 = onView(
                allOf(withText("1"),
                        childAtPosition(
                                withId(R.id.grid),
                                1),
                        isDisplayed()));
        button17.perform(click());

        ViewInteraction button18 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button18.perform(click());

        ViewInteraction button19 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button19.perform(click());

        ViewInteraction button20 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button20.perform(click());

        ViewInteraction floatingActionButton6 = onView(
                allOf(withId(R.id.floatingActionButton),
                        childAtPosition(
                                allOf(withId(R.id.game_coord_layout),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                3),
                        isDisplayed()));
        floatingActionButton6.perform(click());

        ViewInteraction button21 = onView(
                allOf(withText("1"),
                        childAtPosition(
                                withId(R.id.grid),
                                1),
                        isDisplayed()));
        button21.perform(click());

        ViewInteraction button22 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button22.perform(click());

        ViewInteraction button23 = onView(
                allOf(withText("1"),
                        childAtPosition(
                                withId(R.id.grid),
                                1),
                        isDisplayed()));
        button23.perform(click());

        ViewInteraction button24 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button24.perform(click());

        ViewInteraction floatingActionButton7 = onView(
                allOf(withId(R.id.floatingActionButton),
                        childAtPosition(
                                allOf(withId(R.id.game_coord_layout),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                3),
                        isDisplayed()));
        floatingActionButton7.perform(click());

        ViewInteraction button25 = onView(
                allOf(withText("1"),
                        childAtPosition(
                                withId(R.id.grid),
                                1),
                        isDisplayed()));
        button25.perform(click());

        ViewInteraction button26 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button26.perform(click());

        ViewInteraction button27 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button27.perform(click());

        ViewInteraction button28 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button28.perform(click());

        ViewInteraction actionMenuItemView3 = onView(
                allOf(withId(R.id.action_undo), withContentDescription("Undo"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.toolbar),
                                        2),
                                0),
                        isDisplayed()));
        actionMenuItemView3.perform(click());

        ViewInteraction appCompatButton4 = onView(
                allOf(withId(android.R.id.button1), withText("Undo"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.buttonPanel),
                                        0),
                                3)));
        appCompatButton4.perform(scrollTo(), click());

        ViewInteraction floatingActionButton8 = onView(
                allOf(withId(R.id.floatingActionButton),
                        childAtPosition(
                                allOf(withId(R.id.game_coord_layout),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                3),
                        isDisplayed()));
        floatingActionButton8.perform(click());

        ViewInteraction button29 = onView(
                allOf(withText("0"),
                        childAtPosition(
                                withId(R.id.grid),
                                0),
                        isDisplayed()));
        button29.perform(click());

        ViewInteraction button30 = onView(
                allOf(withText("0"),
